<resources>
    <string name="app_name">RickAndMortyInfo</string>
    <string name="title_random_character">CLICK TO</string>
    <string name="sub_title_random_character">Random Character</string>
    <string name="voice_over_info_icon">Additional Information</string>
    <string name="txt_info_description">Click on the GIF to generate a random number. Case you don’t like the number, click again to randon other number</string>
    <string name="txt_continue">Continue</string>
    <string name="navigation_bar_random_character">Random Character</string>
    <string name="navigation_bar_type_number">Type number character</string>
    <string name="navigation_bar_menu_list">Menu list of the characters</string>
    <string name="title_type_number">tYPE A NUMBER</string>
    <string name="hint_type_number">Between 1 and 826</string>
    <string name="txt_error_type_number">the number is not valid</string>
    <string name="sub_title_type_number">BETWEEN 1 and 826</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_info_description_type_number">Enter a number between 1 and 826! Then click continue to see your chosen character.</string>

    <!-- Menu Navigation -->
    <string name="txt_btn_navigate_random_character">Random character</string>
    <string name="txt_btn_navigate_type_number">Type number</string>
    <string name="txt_btn_navigate_menu_list_of_the_character">Menu list</string>

    <!-- Status -->
    <string name="txt_status_alive">Alive</string>
    <string name="txt_status_dead">Dead</string>
    <string name="txt_status_unknown">Unknown</string>
    <string name="back_button">Back button</string>
    <string name="next_button">Next Button</string>
    <string name="load_info_txt_name">Name</string>
    <string name="txt_status">Status:</string>
    <string name="txt_empty" />
    <string name="txt_specie">Specie:</string>
    <string name="txt_gender">Gender:</string>
    <string name="txt_first_see_in">First see in:</string>
    <string name="txt_last_known_location">Last known Location:</string>
    <string name="txt_title_go_to">GO TO</string>
    <string name="txt_random_number">Random number</string>
    <string name="txt_character_list">CHARACTER LIST</string>
    <string name="txt_just_navigate">Just Navigate</string>
    <string name="txt_title_error">ERROR</string>
    <string name="txt_desc_error">Failed to load character information, please go back to the previous screen and try again…</string>
    <string name="txt_error_voice_over">Error to load character information</string>
    <string name="txt_back">Back</string>
    <string name="txt_please_wait">Please wait</string>
    <string name="txt_load_descrition">Loading Character information…</string>
    <string name="txt_load_information_voice_over">Load information</string>
    <string name="txt_type_number_hint">type number between 1 and 826</string>
</resources>