<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_97E0E0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/firstTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/ruslan_display"
                android:text="@string/title_type_number"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/subTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/txt_type_number_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3"
                android:shadowColor="@color/black"
                android:textColorHint="#7E7E7E"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstTitle" />

            <ImageView
                android:id="@+id/iconError"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="15dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/voice_over_info_icon"
                android:src="@drawable/ic_error_notify_message"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subTitle"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/txtError"
                android:layout_width="321dp"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oldenburg"
                android:text="@string/txt_error_type_number"
                android:textColor="#FF2828"
                android:textSize="15sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iconError"
                app:layout_constraintTop_toTopOf="@+id/iconError"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/iconImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="15dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/voice_over_info_icon"
                android:src="@drawable/info_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconError" />

            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="321dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/oldenburg"
                android:gravity="center"
                android:text="@string/txt_info_description_type_number"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iconImg"
                app:layout_constraintTop_toTopOf="@+id/iconImg" />

            <TextView
                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/ruslan_display"
                android:text="@string/sub_title_type_number"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInfo" />


            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/shape_buttons"
                android:backgroundTint="#1476BC"
                android:fontFamily="@font/ruslan_display"
                android:padding="15dp"
                android:text="@string/txt_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/second" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>