<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/llRandomCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnRandomCharacter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/navigation_bar_random_character"
                android:gravity="center"
                android:src="@drawable/random_icon"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTypeNumberCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#1476BC"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnTypeNumberCharacter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/navigation_bar_type_number"
                android:gravity="center"
                android:src="@drawable/type_icon"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMenuListOfTheCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#1476BC"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnMenuListOfTheCharacter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/navigation_bar_menu_list"
                android:gravity="center"
                android:src="@drawable/list_icon"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>