<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_97E0E0"
    tools:context=".MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/btnGifRandomCharacter"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/rick_and_morty_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGifRandomCharacter">

        <LinearLayout
            android:id="@+id/llRandomCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgRandomCharacter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:contentDescription="@string/navigation_bar_random_character"
                android:src="@drawable/random_character_icon"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnRandomCharacter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="15dp"
                android:backgroundTint="#1476BC"
                android:background="@drawable/shape_buttons"
                android:fontFamily="@font/ruslan_display"
                android:padding="15dp"
                android:text="@string/txt_btn_navigate_random_character"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="200dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTypeNumberCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgTypeNumber"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:contentDescription="@string/navigation_bar_random_character"
                android:src="@drawable/type_number_icon"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnTypeNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="15dp"
                android:backgroundTint="#1476BC"
                android:background="@drawable/shape_buttons"
                android:fontFamily="@font/ruslan_display"
                android:padding="15dp"
                android:text="@string/txt_btn_navigate_type_number"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMenuListOfTheCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgMenuListCharacters"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:contentDescription="@string/navigation_bar_random_character"
                android:src="@drawable/menu_list_icon"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnMenuListCharacters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="15dp"
                android:backgroundTint="#1476BC"
                android:background="@drawable/shape_buttons"
                android:fontFamily="@font/ruslan_display"
                android:padding="15dp"
                android:text="@string/txt_btn_navigate_menu_list_of_the_character"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>